add utils functions

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <br>
             <div><span id="game-result"></span></div>
 
-            <div>Wins: <span id="wins"></span></div>
-            <div>Losses: <span id="losses"></span></div>
-            <div>Draws: <span id="draws"></span></div>
-            <div>Total: <span id="total"></span></div>
+            <div>Wins: <span id="wins">0</span></div>
+            <div>Losses: <span id="losses">0</span></div>
+            <div>Draws: <span id="draws">0</span></div>
+            <div>Total: <span id="total">0</span></div>
 
         </section>
     </main>
