add reset button and debug draw setting

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             <br>
             <button id="throw-button">Throw!</button>
             <br>
+            <button id="reset-button">Play Again?</button>
+            <br>
             <div><span id="game-result"></span></div>
 
             <div>Wins: <span id="wins">0</span></div>
