--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
             <div>Rock, Paper or Scissors?</div>
 
-            <div>Choose an option below and try to beat the computer! The rules:</div>
-            <br>
+            <div>Choose an option below and try to beat the computer! The rules are:</div>
+
             <ul>
                 <li>Paper beats Rock</li>
                 <li>Rock beats Scissors</li>
