add reset counter

--- a/index.html
+++ b/index.html
@@ -44,14 +44,15 @@
             <br>
             <button id="throw-button">Throw!</button>
             <br>
-            <button id="reset-button">Play Again?</button>
+            <button id="reset-button">Reset Score</button>
             <br>
             <div><span id="game-result"></span></div>
 
             <div>Wins: <span id="wins">0</span></div>
             <div>Losses: <span id="losses">0</span></div>
             <div>Draws: <span id="draws">0</span></div>
-            <div>Total: <span id="total">0</span></div>
+            <div>Games Played: <span id="total">0</span></div>
+            <div>Resets: <span id="resets">0</span></div>
 
         </section>
     </main>
