--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
     </header>
     <main>
-        <section class="main-section">
+        <section>
 
             <div>Choose an option below and try to beat the computer! The rules are:</div>
 
@@ -29,18 +29,20 @@
                 <li>Scissors beats Paper</li>
             </ul>
             <br>
-            <label>
-                <input type="radio" name="game" value="rock">
-                <img src="assets/rock.png" alt="rock">
-            </label>
-            <label>
-                <input type="radio" name="game" value="paper">
-                <img src="assets/paper.png" alt="paper">
-            </label>
-            <label>
-                <input type="radio" name="game" value="scissors">
-                <img src="assets/scissors.png" alt="scissors">
-            </label>
+            <div>
+                <label>
+                    <input type="radio" name="game" value="rock">
+                    <img src="assets/rock.png" alt="rock">
+                </label>
+                <label>
+                    <input type="radio" name="game" value="paper">
+                    <img src="assets/paper.png" alt="paper">
+                </label>
+                <label>
+                    <input type="radio" name="game" value="scissors">
+                    <img src="assets/scissors.png" alt="scissors">
+                </label>
+            </div>
             <br>
             <button id="throw-button">Throw!</button>
             <br>
